@@ -62,6 +62,7 @@
  - [DS-333] Adjust SWORD ingest crosswalk to store bibliographic citation
 
 (Larry Stone)
+ - [DS-347] Add --quiet option to filter-media (MediaFilterManager) to disable progress messages
  - [DS-297] Move PostgreSQL-specific SQL into etc/postgres for greater clarity
  - [DS-338] Disable cache advice (Expires header) on Bitstream download that requires authorization (XMLUI)
  - [DS-285] Respond to If-Modified-Since request header in XMLUI, also provide Last-Modified response header for Bitstreams
@@ -98,7 +99,7 @@
  - [DS-271] Make the OAI DC crosswalk configurable
  - [DS-260] Template item some times has owningCollection filled and some times not
  - [DS-309] Shiboleth default roles are applied also to anonymous user and user logged-in with other methods
- - [DS-270] Make delegate admin permissions configurable 
+ - [DS-270] Make delegate admin permissions configurable
 
 (Tim Donohue)
  - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
